# ralph-loop

./: .gitignore  CONTRIBUTING.md  LICENSE  PRD.md  README.md  pyproject.toml
demo/: validate.sh
demo/ralph/: config.json  loop-state.json  prd.json
demo/ralph/prompts/: iteration.md  system.md
docs/: AGENT_SUPERVISION.md  DEMO_ACCEPTANCE.md  OPERATOR_RUNBOOK.md  PACKAGING.md
scripts/: install-dev.sh  watchdog.sh
src/ralph_loop/: adapter.py  cli.py  config.py  engine.py  git_ops.py  io.py  models.py  prompts.py
tests/: test_engine_guardrails.py
