[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ralph-loop"
version = "0.1.0"
description = "Ralph loop CLI for iterative spec-driven coding"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
ralph-loop = "ralph_loop.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
